--- a/index.html
+++ b/index.html
@@ -26,54 +26,48 @@
   </head>
   <body>
     <div class="main">
-      <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Главная</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Сертификаты</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Услуги</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Товары</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
+          <a class="navbar-brand" href="#">
+            <img class="header_logo" src="img/yana-logo.jpg" alt="yana-logo" />
+          </a>
+          <div class="div">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Главная</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Сертификаты</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Услуги</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Товары</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
+
       <section class="intro">
         <div class="container">
           <h1 class="intro_title">Орловская Яна</h1>
@@ -83,32 +77,32 @@
             нейрологопед.
           </div>
         </div>
-      </section>
-      <div class="services">
-        <div class="container">
-          <h2 class="services_title">Услуги</h2>
-          <div class="services_item">
-            <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
-            <p class="services_text">Консультация</p>
-          </div>
-          <div class="services_item">
-            <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
-            <p class="services_text">Логопедический массаж</p>
-          </div>
-          <div class="services_item">
-            <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
-            <p class="services_text">Обучение чтению</p>
-          </div>
-          <div class="services_item">
-            <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
-            <p class="services_text">Супервизия для специалистов</p>
-          </div>
-          <div class="services_item">
-            <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
-            <p class="services_text">Информация по предстоящему обучению</p>
+        <div class="services">
+          <div class="container container_services">
+            <h2 class="services_title">Услуги</h2>
+            <div class="services_item">
+              <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
+              <p class="services_text">Консультация</p>
+            </div>
+            <div class="services_item">
+              <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
+              <p class="services_text">Логопедический массаж</p>
+            </div>
+            <div class="services_item">
+              <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
+              <p class="services_text">Обучение чтению</p>
+            </div>
+            <div class="services_item">
+              <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
+              <p class="services_text">Супервизия для специалистов</p>
+            </div>
+            <div class="services_item">
+              <img src="img/yana-logo.jpg" alt="logo" class="services_icon" />
+              <p class="services_text">Информация по предстоящему обучению</p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
     <div class="container">
       <div
